--- a/openapi/wave.yaml
+++ b/openapi/wave.yaml
@@ -455,6 +455,8 @@ paths:
           $ref: "#/components/responses/401"
         405:
           $ref: "#/components/responses/405"
+        406:
+          $ref: "#/components/responses/406"
 
     put:
       operationId: changeContactStatus
@@ -480,8 +482,12 @@ paths:
           $ref: "#/components/responses/400"
         401:
           $ref: "#/components/responses/401"
+        404:
+          $ref: "#/components/responses/404"
         405:
           $ref: "#/components/responses/405"
+        406:
+          $ref: "#/components/responses/406"
 
     get:
       operationId: getContactInformation
