--- a/openapi/wave.yaml
+++ b/openapi/wave.yaml
@@ -453,6 +453,8 @@ paths:
           $ref: "#/components/responses/400"
         401:
           $ref: "#/components/responses/401"
+        404:
+          $ref: "#/components/responses/404"
         405:
           $ref: "#/components/responses/405"
         406:
