--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     "ext-zmq": "*"
   },
   "require-dev": {
-    "phpunit/phpunit": "^9.5"
+    "phpunit/phpunit": "^9.5",
+    "ext-readline": "*"
   },
   "autoload": {
     "psr-4": {
