--- a/openapi/wave.yaml
+++ b/openapi/wave.yaml
@@ -787,6 +787,8 @@ paths:
           $ref: "#/components/responses/404"
         405:
           $ref: "#/components/responses/405"
+        409:
+          $ref: "#/components/responses/409"
 
     get:
       operationId: getMembersList
