--- a/openapi/wave.yaml
+++ b/openapi/wave.yaml
@@ -1104,6 +1104,8 @@ paths:
           $ref: "#/components/responses/400"
         401:
           $ref: "#/components/responses/401"
+        403:
+          $ref: "#/components/responses/403"
         404:
           $ref: "#/components/responses/404"
         405:
@@ -1139,6 +1141,8 @@ paths:
           $ref: "#/components/responses/400"
         401:
           $ref: "#/components/responses/401"
+        403:
+          $ref: "#/components/responses/403"
         404:
           $ref: "#/components/responses/404"
         405:
