--- a/openapi/wave.yaml
+++ b/openapi/wave.yaml
@@ -967,6 +967,8 @@ paths:
           $ref: "#/components/responses/404"
         405:
           $ref: "#/components/responses/405"
+        406:
+          $ref: "#/components/responses/406"
 
     post:
       operationId: writeMessage
@@ -1110,6 +1112,8 @@ paths:
           $ref: "#/components/responses/404"
         405:
           $ref: "#/components/responses/405"
+        406:
+          $ref: "#/components/responses/406"
 
     delete:
       operationId: deleteMessage
